stylesheet.css
body {
  padding: 0;
  margin: 0;
  font-family: 'Inter', sans-serif;
  float: none;
  font-weight: 400;
  animation: fadein 2s;
  font-size: 15px;
  height: 100vh;
  color: black;
  overflow: hidden;
}

p {
  font-size: 27px;
  padding: 0 0 0 0;
  margin: 0;
  font-weight: 500;
  line-height: 32px;
}

p2 {
  font-size: 15px;
  padding: 0 0 0 0;
  margin: 0;
  font-weight: 500;
  line-height: 20px;
}

h3 {
  font-size: 15px;
  padding: 0 0 8px 0;
  margin: 0;
  font-weight: 500;
  color: grey;
}

body a {
  color: black;
  text-decoration: none;
}

@font-face {
  font-family: Inter;
  src: url(Inter-Regular.otf) format("opentype");
  font-weight: 400;
}

@font-face {
  font-family: Inter;
  src: url(Inter-SemiBold.otf;) format("opentype");
  font-weight: 800;
}

@-webkit-keyframes fadein {
  0%   { opacity: 0; }
  100% { opacity: 1; }
}


@-webkit-keyframes reveal {
  0% {
    transform: translate(0,100%);
  }
  100% {
    transform: translate(0,0);
  }
}


html {
  scroll-behavior: smooth;
}

.dark-mode {
  background-color: black;
  color: white;
}

.dark-mode a {
  color: white;
  border-bottom: 1px solid white;
}

.yakkios-header {
    font-family: Inter, sans-serif;
    width: 100vw;
    padding: 1rem;
    position: fixed;
    top: 0;
    justify-content: space-between;
    font-size: 27px;
    display: flex;
    box-sizing: border-box;
    font-weight: 500;
    background-color: white;
  }

.site-title-header {
  text-align: left;
}

.centre-header {
  text-align: center;
}

.header_copyright {
  display: flex;
}

.hero {
  padding-left: 10rem;
  padding-right: 10rem;
}

.logo {
  padding-top: 4rem;
  padding-left: 2rem;
  padding-right: 2rem;
}

.logo img {
  max-width: 100%;
  animation: fadein 2s;
}

.hero img {
  max-width: 100%;
  animation: fadein 2s;
}

.hero-two {
  padding-left: 12rem;
  padding-right: 12rem;
}

.hero-two img {
  max-width: 100%;
  animation: fadein 2s;
}

.hero-three {
  padding-left: 24rem;
  padding-right: 24rem;
}

.hero-three img {
  max-width: 100%;
  animation: fadein 2s;
}


.footer {
    font-family: Inter, sans-serif;
    font-weight: 500;
    /*width: 100vw;*/
    padding: 1rem;
    bottom: 0;
    justify-content: space-between;
    box-sizing: border-box;
    color: grey;
}

.footer a {
  text-decoration: none;
}

.footer a:hover {
  border: none;
}

.feature-block {
  padding-top: 2.5rem;
  padding-left: .6rem;
}

.feature-block-about {
    padding: 0px 2rem 0 0px;
    margin: 0px;
    font-weight: normal;
    max-width: 60%;
}


.feature-block-about a { 
  text-decoration: none;

}

.feature-block-about a:hover { 
  text-decoration: none;
  color: grey;
}

.feature-block-about a span { 
  position: absolute; 
  display:none; 
  z-index:99; 
  float: right;
}

.feature-block-about h3 {
  font-size: 15px;
  padding: 0 0 8px 0;
  margin: 0;
  font-weight: 500;
}

.feature-block-about p {
  padding: 0;
  font-weight: 500;
  font-size: 15px;
  line-height: 17px;
  padding: 0;
  margin: 0;
}

.gif {
    width: 270px;
  }

.about-image {
  max-width: 60%;
  padding-left: 1rem;
}

.paragraph-indent {
  text-indent: 40px;
}

.feature-inner-block {
  display: inline-block;
  margin-left: 0;
  margin-right: 0;
  width: 60%;
  float: left;
  font-weight: normal;
}


#padding_block_156 {
  height: 18vw;
}

#padding_block_40 {
  height: 80px;
}

#padding_block_64 {
  height: 64px;
}

#padding_block_104 {
  height: 104px;
}


#padding_block_20vw {
  height: 20vw;
}


.work-index-wrapper {
  padding: 0 0 0 .6rem;
}

#div1 {
  margin-top: 0px;
  min-width: 270px;
  display: inline-block;
}

#div2 {
  margin-top: 0px;
    min-width: 370px;
    display: inline-block;
}

.about-wrapper {
  padding: 6rem 0 0 1rem;
}

#div3 {
  vertical-align: top;
  padding-right: 2rem;
  max-width: 60%;
  display: inline-block;
}

#div4 {
  vertical-align: top;
  margin-top: 0px;
    max-width: 800px;
    padding-right: 30px;
}

.about-gif {
  padding-left: .6rem;
  max-width: 800px;
}

.About-Project {
    padding-left: 10rem;
    margin: 0px;
    font-size: 15px;
    font-weight: 500;
}


/*SCREEN SIZES*/

@media screen and (min-width: 1270px) {

}



@media screen and (max-width: 890px) {

.hero {
  padding-right: 1rem;
  padding-left: 1rem;
}

#padding_block_80 {
  height: 80px;
}

.About-Project {
    padding-left: .6rem;
}

#padding_block_104 {
  height: 32px;
}

#div2 h3 {
  visibility: hidden;
}

#div2 p {
  padding-bottom: 12px;
}

}

@media screen and (max-width: 667px) {

  }


@media screen and (max-width: 590px) {

#div4 {

  margin-top: 40px;
}

#div3 {
  vertical-align: top;
  padding-right: 1rem;
  max-width: 100%;
  display: inline-block;
}

.about-image {
  max-width: 92%;
  padding-left: 1rem;
  padding-right: 1rem;
}

.feature-block-about {
  max-width: 100%;
}

}


::selection {
  background: orange; /* WebKit/Blink Browsers */
}
::-moz-selection {
  background: orange; /* Gecko Browsers */
}

